feat: Add a spinner feature and redirect file

--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,8 @@
                 "input": "public"
               },
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/_redirects"
             ],
             "styles": ["src/styles.scss"],
             "scripts": []
@@ -91,7 +92,8 @@
                 "input": "public"
               },
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/_redirects"
             ],
             "styles": ["src/styles.scss"],
             "scripts": []
